CSS/style.css
:root{
    box-sizing: border-box;
    font-size: 1em;
    font-family: 'Roboto Slab', serif;
    --color-primary:#a52a2a;
    --color-primaryDark:#862323;
    --color-compliment:#D4A0A7;
    --color-accentOne:#99C24D;
    --color-accentTwo:#1D3461;
    --color-highlight:#0094C6;
    --color-gray:#808080;
    --color-black:#000000;
    --color-white:#FFFFFF;
}

/*Body*/
body{
    width:95vw;
    height: 95vh;
    margin:1em auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-image:linear-gradient(0deg,
                                   var(--color-primary) 0% 5%, 
                                   var(--color-gray) 5% 12%,
                                   var(--color-black) 12% 13%, 
                                   var(--color-compliment) 12% 98%,
                                   var(--color-primary) 98% 100% );
    background-size: cover;
}
/*Body*/

/*Headimg*/
h1{
    font-size: 4em;
}
/*Heading*/

/*Sub-Heading*/
h2{
    font-size: 1em;
}
a{
    text-decoration: none;
    color: var(--color-primary);
}
a:hover{
    text-decoration: underline;
}
a:visited{
    color: var(--color-primaryDark);
}
/*Sub-Heading*/

/*Main Section*/
main{
    width: 95%;
    height: 90%;
    margin:1em 0;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}
.bookShelf,.display,.input{
    width: 45%;
    height: 97%;
    padding: 0.5%;
    border:4px solid var(--color-black); 
}
.bookShelf{
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: repeat(6,1fr);
    grid-template-rows: repeat(3,1fr);
    gap: 1%;
    background-image:linear-gradient(0deg,var(--color-primaryDark) 0% 1%, var(--color-primary) 1% 33%,
                                          var(--color-primaryDark) 33% 34%, var(--color-primary) 34% 66%,
                                          var(--color-primaryDark) 66% 67%,var(--color-primary) 67% 99%,
                                          var(--color-primaryDark) 99% 100%);
}
.display,.input{
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-content: center;
    text-align: start;
    font-size: 3em;
    flex-wrap: nowrap;
    background-color: var(--color-primary);
}
/*Main Section*/

/*BookShelf Section*/
.book{
    text-align: center;
    padding: 0 25%;
    writing-mode: vertical-rl;
    text-orientation:mixed;
    font-size: 1.25em;
    outline: var(--color-black) solid 0.0625rem;
}
.book:hover{
    outline: var(--color-highlight) solid 0.25rem;
}
.read{
    color: var(--color-black);
    background-color: var(--color-accentOne);
}
.notread{
    color: var(--color-white);
    background-color: var(--color-accentTwo);
}
/*BookShelf Section*/

/*Display/Input Section*/
.hide{
    display: none;
}
/*Display Section*/
#title,#author,#pages{
    background-color: var(--color-compliment);
    outline:var(--color-black) solid 0.0625em;
}
#readDisplay{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;    
    margin-left: auto;
    margin-right: auto;
    width: 70%;
    outline: var(--color-black) solid 0.0625em;
}
#add,#remove{
    right: 0;
    position: absolute;
}
#add{
    top:0;
}
#remove{
    bottom: 0;
}
#add:hover{
    text-shadow:0.0625em 0.0625em 0 var(--color-highlight);
    border-left:0.0625em solid var(--color-black);
    border-bottom:0.0625em solid var(--color-black);
}
#remove:hover{
    text-shadow:0.0625em 0.0625em 0 var(--color-highlight);
    border-left:0.0625em solid var(--color-black);
    border-top:0.0625em solid var(--color-black);
}
.material-icons{
    font-size: 48px;
    padding-left: 5%;
    cursor: pointer;
    border-left: 0.0625em solid var(--color-black) ;
}
/*Display Section*/
/*Input Section*/ 
input{
    background-color: var(--color-compliment);
    font-size: 0.75em;
}
input[type="checkbox"]{
    height:1em;
    width:1em;
}
button{
    font-size: 1em;
    font-weight: 700;
    background-color: transparent;
    border:none;
    cursor: pointer;
}
.inputButtons{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}
#submit,#cancel{
    opacity: 1;
    max-width:50%;
    font-size: 1em;
    outline: var(--color-black) solid 0.0625em;
}
/*Display/Input Section*/

